# opengl-box

./: CMakeLists.txt  README.md
include/: display.h  util.h
shaders/: basic.fsh  basic.vsh
src/: display.cpp  main.cpp  util.cpp
